--- a/gungame_core/Cargo.toml
+++ b/gungame_core/Cargo.toml
@@ -3,7 +3,7 @@ name = "gungame_core"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+bytemuck = { version = "1.7.3", features = ["derive"] }
+nalgebra = "0.30.1"
 nom = "7.1.0"
