--- a/fall_core/Cargo.toml
+++ b/fall_core/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-nalgebra = "0.30.1"
+approx = "0.5.1"
+nalgebra = { version = "0.30.1", features = ["bytemuck"] }
 nom = "7.1.0"
